XSTR, reduce rubbertree gen